# lidar_camera_radar_cal

./: CMakeLists.txt  package.xml  readme.md
config/: TransformFilter.cfg  camera-intrinsics.yaml  camera-intrinsics_cam0.yaml  camera-intrinsics_cam1.yaml  camera-intrinsics_cam2.yaml  camera-intrinsics_cam3.yaml  camera-intrinsics_cam4.yaml  camera-intrinsics_cam5.yaml  camera-intrinsics_cam6.yaml  extrinsics.yaml  extrinsics_cam0_velodyne copy.yaml  extrinsics_cam0_velodyne.yaml  extrinsics_cam1_hesai1.yaml  extrinsics_cam1_velodyne.yaml  extrinsics_cam2_hesai1.yaml  extrinsics_cam2_velodyne copy.yaml  extrinsics_cam2_velodyne.yaml  extrinsics_cam3_velodyne.yaml  extrinsics_cam4_velodyne.yaml  extrinsics_cam5_velodyne.yaml  extrinsics_cam6_velodyne.yaml  ros-node-config.yaml  setup-caliboard.yaml
data/: point_set.csv  point_set_cam0_velodyne.csv  point_set_cam1_hesai1.csv  point_set_cam1_velodyne.csv  point_set_cam2_hesai1 copy.csv  point_set_cam2_velodyne copy.csv  point_set_cam2_velodyne.csv  point_set_cam3_velodyne.csv  point_set_cam4_velodyne.csv  point_set_cam5_velodyne.csv  point_set_cam6_velodyne.csv  reprojection_error_anaylysis.txt
include/: calibration_tool.h
include/image_opr/: aruco_manager.h  image_draw.h  image_process.h
include/pointcloud2_opr/: pcd_saver.h  point_cloud_process.h
include/tools/: CommandHandler.h  conversion_bridge.h  dynamic_reconfigure.h  file_operator.h  ros_topic_manager.h  rviz_draw.h  timestamp_cov.h
launch/: lidar_cam_syn_fusion.launch  lidar_camera_calibration.launch  reprojection_error.launch
lib/: calibration_tool.tpp
lib/image_opr/: aruco_manager.cpp  image_draw.cpp  image_process.cpp
lib/pointcloud2_opr/: pcd_saver.cpp  point_cloud_process.tpp
lib/tools/: conversion_bridge.cpp  file_operator.cpp  rviz_draw.cpp
rviz/: calibration.rviz  fusion.rviz  reprojection.rviz
src/: calibration_node.cpp  controller_menu.cpp  image_process_node.cpp  pointcloud_process_node.cpp  test1.cpp
src/demo/: aruco_print.py  lidar_cam_syn_fusion.cpp  merge_points_pub.cpp
src/demo/reprojection_error/: boarder_capture copy.cpp  boarder_capture.cpp
